# Morbitytx

./: .env  Cargo.toml  icon.icns  messenger.db
src/: db.rs  encryption.rs  main.rs  models.rs  utils.rs
src/services/: auth.rs  contacts.rs  messages.rs  mod.rs
