[package]
name = "Morbityx"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "Morbityx Messenger"
identifier = "com.morbityx.app"
icon = ["icon.icns", "icon.ico"]
version = "1.0.0"
copyright = "© 2025 Boris Maltsev"
category = "Utility"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = "0.4"
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
eframe = "0.33.2"
rand = "0.8"
rfd = "0.14"
lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
dotenvy = "0.15"
image = "0.24"
